# gavel-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  SETUP.md  agents.md  context.md  judge-dry.md  one-shot-flow.md  processor-bug.md  pyproject.toml  release-notes.md
.cicadas/: config.json  index.json  registry.json  todo.md
.cicadas-skill/cicadas/: README.md  SKILL.md  implementation.md
.cicadas/canon/: product-overview.md  repo-context.md  repo.json  schema.md  summary.md  tech-overview.md
.claude/skills/: gavel-skill  update-docs
_bmad-output/: bmm-workflow-status.yaml  results-files-design.md  run-output-analysis.md
_bmad-output/implementation-artifacts/: 1-1-initialize-project-structure.md  1-2-initialize-pyproject-toml-and-dependencies.md  1-3-set-up-pre-commit-hooks.md  1-4-set-up-pytest-configuration-and-basic-test-structure.md  1-5-create-central-logging-configuration.md  1-6-initialize-opentelemetry-setup.md  2-1-build-typer-cli-entry-point-and-base-command-structure.md  2-2-implement-gavel-oneshot-create-scaffolding.md  2-3-implement-config-loading-and-validation.md  2-4-implement-agents-configuration-schema.md  2-5-implement-scenarios-configuration.md  2-6-implement-judge-configuration-schema.md  3-1-create-processor-base-classes-and-interface.md  3-2-implement-promptinputprocessor.md  3-3-implement-closedboxinputprocessor.md  3-4-implement-scenarioprocessor.md  3-5-implement-executor.md  3-6-implement-provider-abstraction.md  3-7-implement-retry-logic.md  3-8-wire-cli-oneshot-run-to-execution-pipeline.md  3-9-fix-provider-factory-interface-mismatch.md  4-1-create-judge-base-class-and-interface.md  4-2-integrate-deepeval-judges.md  4-3-implement-custom-geval-judge-support.md  4-4-implement-judge-registry-and-factory.md  4-5-implement-sequential-judge-execution.md  4-6-implement-result-storage-results-jsonl.md  4-7-implement-re-judging-capability.md  5-1-implement-reporter-base-class-and-interface.md  5-2-implement-jinja2-based-report-generation.md  5-3-implement-oneshot-report-format.md  5-4-implement-conversational-report-format.md  5-5-implement-autotune-progression-report.md  6-1-create-run-and-config-abstract-base-classes.md  6-2-implement-localfilesystemrun-storage.md  6-3-implement-manifest-run-metadata.md  6-4-implement-run-history-tracking.md  6-5-implement-milestone-marking.md  6-6-implement-run-cleanup.md  6-7-implement-run-archive-and-export.md  (+34 more)
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics-conversational-eval.md  epics.md  prd-conversational-eval.md  prd.md  product-brief-gavel-ai-2025-12-27.md  project-context.md  tdd-conversational-eval.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/quickstart/: getting-started.md
docs/specs/: schema-configs.md  schema-outputs.md
src/gavel_ai/: __init__.py  log_config.py  telemetry.py
tests/: conftest.py  test_logging_config.py  test_project_structure.py  test_telemetry.py
tests/integration/: test_conversation_timeout_error.py  test_judge_runner_mixed.py  test_metadata_integration.py  test_oneshot_e2e.py  test_oneshot_pipeline_e2e.py  test_oneshot_run_wiring.py  test_processor_chain_e2e.py  test_provider_factory_integration.py  test_results_export.py  test_telemetry_integration.py  test_telemetry_performance.py  test_variant_execution.py
tests/unit/: test_agent_models.py  test_agents_config.py  test_backends.py  test_cli.py  test_closedbox_processor.py  test_config_loader.py  test_config_models.py  test_conversation.py  test_conversational_multi_variant.py  test_conversational_step.py  test_data_sources.py  test_deepeval_judge.py  test_deepeval_new_types.py  test_dotenv_loading.py  test_executor.py  test_judge_base.py  test_judge_executor.py  test_judge_registry.py  test_judges_config.py  test_log_config.py  test_metadata_collector.py  test_metadata_performance.py  test_metadata_schema.py  test_model_utils.py  test_models.py  test_oneshot_create.py  test_processors.py  test_prompt_processor.py  test_provider_factory.py  test_rejudge.py  (+11 more)
(+283 files in other folders)
